--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
   position:relative;
   overflow:hidden;
   animation:fadeIn 1s ease;
-  text-align:left; /* غيرت للتموضع على اليسار */
+  text-align:center;
 }
 
 .glow {
@@ -42,6 +42,17 @@ body {
   animation:glowAnim 3s ease-in-out infinite alternate;
 }
 
+/* الصورة والاسم مع الجملتين تحت الاسم */
+.left-section {
+  text-align:center;
+  margin-bottom:20px;
+  display:flex;
+  flex-direction:column;
+  align-items:flex-start;
+  gap:8px;
+  margin-left:10%; /* المسافة من اليسار */
+}
+
 .avatar {
   width:130px;
   height:130px;
@@ -52,7 +63,6 @@ body {
   box-shadow:0 0 18px rgba(255,215,0,0.4);
   overflow:hidden;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
-  margin-bottom:10px;
 }
 .avatar img {
   width:100%;
@@ -67,22 +77,21 @@ body {
 }
 
 h1 {
-  font-size:28px;
+  font-size:26px;
   letter-spacing:1px;
   background: linear-gradient(90deg, #f5d380, #fff6d0, #f5d380);
   -webkit-background-clip:text;
   color:transparent;
   text-shadow:0 0 6px rgba(255,215,0,0.3);
-  margin-bottom:5px;
+  margin:0 auto;
 }
 
-/* النصين تحت الاسم بتأثير موجة، جهة اليسار */
 .wave-text {
   font-size:14px;
   color:#ffd700;
   display:flex;
   flex-direction:column;
-  gap:3px;
+  align-items:flex-start;
 }
 .wave-text span{
   display:inline-block;
@@ -97,7 +106,7 @@ h1 {
   75% {transform: translateY(2px);}
 }
 
-/* اقتباسات */
+/* الاقتباسات */
 .quotes{
   margin-top:20px;
   font-size:17px;
@@ -215,14 +224,17 @@ h1 {
 </head>
 <body>
 <div class="card">
+
   <div class="glow"></div>
 
   <!-- الصورة والاسم والجملتين -->
-  <div class="avatar"><img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/></div>
-  <h1>ɖƲιιȻ</h1>
-  <div class="wave-text">
-    <span>الحربوقة</span>
-    <span>أم لسان طويل</span>
+  <div class="left-section">
+    <div class="avatar"><img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/></div>
+    <h1>ɖƲιιȻ</h1>
+    <div class="wave-text">
+      <span>الحربوقة</span>
+      <span>أم لسان طويل</span>
+    </div>
   </div>
 
   <!-- الاقتباسات -->
@@ -231,9 +243,10 @@ h1 {
     <span>أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك.</span>
   </div>
 
+  <!-- القلب -->
   <div class="heart">❤</div>
 
-  <!-- قسم الفيديوهات -->
+  <!-- الفيديوهات -->
   <div class="videos">
     <div class="videos-title">فيديوهاتي</div>
     <div class="videos-scroll">
