--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Dullc</title>
+<title>Dullc Edition</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
 
@@ -25,11 +25,11 @@ body {
   border:1px solid rgba(255,215,0,0.25);
   border-radius:30px;
   padding:35px 30px 45px;
+  text-align:center;
   box-shadow:0 0 25px rgba(255,215,0,0.15);
   position:relative;
   overflow:hidden;
   animation:fadeIn 1s ease;
-  text-align:center;
 }
 
 .glow {
@@ -42,15 +42,12 @@ body {
   animation:glowAnim 3s ease-in-out infinite alternate;
 }
 
-/* الصورة والاسم مع الجملتين تحت الاسم */
+/* الصورة والاسم والجملتين تحت الاسم */
 .left-section {
-  text-align:center;
-  margin-bottom:20px;
   display:flex;
   flex-direction:column;
-  align-items:flex-start;
-  gap:8px;
-  margin-left:10%; /* المسافة من اليسار */
+  align-items:center;
+  margin-bottom:20px;
 }
 
 .avatar {
@@ -77,13 +74,14 @@ body {
 }
 
 h1 {
-  font-size:26px;
-  letter-spacing:1px;
+  margin:10px 0 5px;
+  font-size:28px;
+  letter-spacing:2px;
   background: linear-gradient(90deg, #f5d380, #fff6d0, #f5d380);
   -webkit-background-clip:text;
   color:transparent;
-  text-shadow:0 0 6px rgba(255,215,0,0.3);
-  margin:0 auto;
+  animation:shine 4s linear infinite;
+  text-shadow:0 0 8px rgba(255,215,0,0.3);
 }
 
 .wave-text {
@@ -91,19 +89,19 @@ h1 {
   color:#ffd700;
   display:flex;
   flex-direction:column;
-  align-items:flex-start;
+  align-items:center;
+  gap:3px;
 }
 .wave-text span{
   display:inline-block;
-  animation:wave 1.5s infinite;
+  animation:wave 1.5s ease-in-out infinite alternate;
 }
-.wave-text span:nth-child(1) {animation-delay:0s;}
-.wave-text span:nth-child(2) {animation-delay:0.3s;}
+.wave-text span:nth-child(2){
+  animation-delay:0.3s;
+}
 @keyframes wave{
-  0%,100% {transform: translateY(0);}
-  25% {transform: translateY(-2px);}
-  50% {transform: translateY(0);}
-  75% {transform: translateY(2px);}
+  0%,100%{transform: translateY(0);}
+  50%{transform: translateY(-3px);}
 }
 
 /* الاقتباسات */
@@ -158,7 +156,7 @@ h1 {
   100%{transform:translateX(-50%) scale(1.05);}
 }
 
-/* قسم الفيديوهات */
+/* الفيديوهات */
 .videos {
   width:100%;
   margin-top:20px;
@@ -202,7 +200,7 @@ h1 {
   overflow:hidden;
   margin:0 10px;
   border:1px solid rgba(255,215,0,0.25);
-  box-shadow:0 0 15px rgba(255,215,0,0.2);
+  box-shadow:0 0 15px rgba(255,215,0.2);
   opacity:0;
   transform:translateY(20px);
   animation:fadeInUp .8s ease forwards;
@@ -227,7 +225,7 @@ h1 {
 
   <div class="glow"></div>
 
-  <!-- الصورة والاسم والجملتين -->
+  <!-- الصورة والاسم والجملتين تحت الاسم -->
   <div class="left-section">
     <div class="avatar"><img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/></div>
     <h1>ɖƲιιȻ</h1>
