--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ body {
 
 .top-section {
   display: flex;
-  align-items:flex-start;
   flex-direction: column;
+  align-items: center;
   margin-bottom: 20px;
 }
 
@@ -59,7 +59,6 @@ body {
   position:relative;
   z-index:2;
   overflow:hidden;
-  margin-left:0; /* يبقى على اليسار */
   transition: transform 0.4s ease, box-shadow 0.4s ease;
 }
 .avatar img {
@@ -75,7 +74,7 @@ body {
 }
 
 h1 {
-  margin:10px auto 5px; /* متوسط تحت الصورة */
+  margin:10px 0 5px;
   font-size:30px;
   letter-spacing:2px;
   background: linear-gradient(90deg, #f5d380, #fff6d0, #f5d380);
@@ -121,25 +120,18 @@ h1 {
   margin-top:18px;
   font-size:17px;
   line-height:1.9;
-  opacity:0;
   background:rgba(255,215,0,0.05);
   padding:15px;
   border-radius:20px;
   border:1px solid rgba(255,215,0,0.12);
-  box-shadow:0 0 12px rgba(255,215,0.07);
-  animation:fadeInUp 1s ease forwards 0.5s;
+  box-shadow:0 0 12px rgba(255,215,0,0.07);
+  /* تم إزالة أي تأثير توهج */
+  opacity:1;
 }
 .quotes span{
   display:block;
   margin-bottom:10px;
-  opacity:0;
-  animation:quoteAppear 0.8s ease forwards;
-}
-.quotes span:nth-child(1){animation-delay:0.7s}
-.quotes span:nth-child(2){animation-delay:1s}
-@keyframes quoteAppear{
-  0%{opacity:0; transform:translateY(15px);}
-  100%{opacity:1; transform:translateY(0);}
+  opacity:1;
 }
 
 .heart {
