--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Dullc Edition</title>
+<title>Dullc</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
 
@@ -17,6 +17,7 @@ body {
   min-height:100vh;
   padding:25px;
 }
+
 .card {
   width:100%;
   max-width:600px;
@@ -24,7 +25,7 @@ body {
   border:1px solid rgba(255,215,0,0.25);
   border-radius:30px;
   padding:35px 30px 45px;
-  text-align:center;
+  text-align:left;
   box-shadow:0 0 25px rgba(255,215,0,0.15);
   position:relative;
   overflow:hidden;
@@ -34,7 +35,7 @@ body {
 .top-section {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: flex-start; /* الصورة على اليسار */
   position: relative;
 }
 
@@ -61,16 +62,21 @@ body {
   box-shadow:0 0 30px rgba(255,215,0,0.6);
 }
 
+/* الاسم والعبارتين تحت الصورة ومتوسطيهما بالنسبة للصورة */
 .name-container {
-  width: 100%;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* يضمن التوسيط بالنسبة للصورة */
   margin-top: 10px;
+  width: 130px; /* نفس عرض الصورة */
 }
+
 h1 {
   font-size:28px;
   letter-spacing:2px;
   color:#f5d380;
   margin-bottom:5px;
+  text-align:center;
 }
 
 .wave-text {
