--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ body {
   min-height:100vh;
   padding:25px;
 }
-
 .card {
   width:100%;
   max-width:600px;
@@ -25,18 +24,24 @@ body {
   border:1px solid rgba(255,215,0,0.25);
   border-radius:30px;
   padding:35px 30px 45px;
-  text-align:left;
+  text-align:center;
   box-shadow:0 0 25px rgba(255,215,0,0.15);
   position:relative;
   overflow:hidden;
   animation:fadeIn 1s ease;
 }
 
+/* بلوك الصورة والاسم والجملتين */
 .top-section {
   display: flex;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.left-box {
+  display: flex;
   flex-direction: column;
-  align-items: flex-start; /* الصورة على اليسار */
-  position: relative;
+  align-items: center; /* الاسم والجملتين يتوسطوا الصورة */
+  margin-right: auto;  /* يخلي البلوك ناحية اليسار فقط */
 }
 
 .avatar {
@@ -62,20 +67,10 @@ body {
   box-shadow:0 0 30px rgba(255,215,0,0.6);
 }
 
-/* الاسم والعبارتين تحت الصورة ومتوسطيهما بالنسبة للصورة */
-.name-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* يضمن التوسيط بالنسبة للصورة */
-  margin-top: 10px;
-  width: 130px; /* نفس عرض الصورة */
-}
-
-h1 {
+h1.name {
+  margin:10px 0 5px;
   font-size:28px;
-  letter-spacing:2px;
   color:#f5d380;
-  margin-bottom:5px;
   text-align:center;
 }
 
@@ -83,10 +78,10 @@ h1 {
   color:#f5d380;
   font-size:14px;
   text-align:center;
-  margin:1px 0;
+  margin:2px 0;
   animation:wave 2s ease-in-out infinite alternate;
 }
-.wave-text:nth-child(2) {
+.wave-text:nth-child(3) {
   animation-delay:0.3s;
 }
 
@@ -214,7 +209,7 @@ h1 {
 .video-box:hover{
   transform:scale(1.07);
   transition:.25s ease;
-  box-shadow:0 0 18px rgba(255,215,0.4);
+  box-shadow:0 0 18px rgba(255,215,0,0.4);
 }
 </style>
 </head>
@@ -223,9 +218,11 @@ h1 {
   <div class="glow"></div>
 
   <div class="top-section">
-    <div class="avatar"><img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/></div>
-    <div class="name-container">
-      <h1>ɖƲιιȻ</h1>
+    <div class="left-box">
+      <div class="avatar">
+        <img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/>
+      </div>
+      <h1 class="name">ɖƲιιȻ</h1>
       <div class="wave-text">الحربوقة 🐍</div>
       <div class="wave-text">أم لسان طويل</div>
     </div>
