--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center; 
+  position: relative;
 }
 
 .avatar {
@@ -56,6 +57,7 @@ body {
   box-shadow:0 0 18px rgba(255,215,0,0.4);
   overflow:hidden;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
+  position: relative;
 }
 .avatar img {
   width:100%;
@@ -121,7 +123,7 @@ h1.name {
   padding:10px 15px;
   border-radius:12px;
   min-width:200px;
-  box-shadow: 0 0 15px rgba(255,215,0,0.2);
+  box-shadow: 0 0 15px rgba(255,215,0.2);
   transition: 0.3s ease;
 }
 .info-row:hover {
@@ -264,6 +266,37 @@ h1.name {
   transition:.25s ease;
   box-shadow:0 0 18px rgba(255,215,0,0.4);
 }
+
+/* ======= ثلوج الصورة ======= */
+#snow-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.snowflake {
+  position: absolute;
+  top: -10px;
+  color: #fff;
+  font-size: 8px;
+  user-select: none;
+  pointer-events: none;
+  opacity: 0.8;
+  animation-name: fall;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes fall {
+  0% { transform: translateY(0) rotate(0deg); opacity:0.8; }
+  100% { transform: translateY(150px) rotate(360deg); opacity:0; }
+}
+
 </style>
 </head>
 <body>
@@ -276,6 +309,7 @@ h1.name {
     <div class="left-box">
       <div class="avatar">
         <img src="https://img.alfrsantv.com/img/f176635888499821.png" alt="Avatar"/>
+        <div id="snow-container"></div>
       </div>
       <h1 class="name">ɖƲιιȻ</h1>
       <div class="wave-text">الحربوقة 🐍</div>
@@ -335,6 +369,26 @@ h1.name {
   </div>
 
 </div>
+
+<script>
+const snowContainer = document.getElementById('snow-container');
+
+function createSnowflake() {
+  const snowflake = document.createElement('div');
+  snowflake.classList.add('snowflake');
+  snowflake.style.left = Math.random() * 130 + 'px'; // عرض الصورة
+  snowflake.style.animationDuration = 2 + Math.random() * 3 + 's';
+  snowflake.style.fontSize = 6 + Math.random() * 6 + 'px';
+  snowflake.textContent = '❄';
+  snowContainer.appendChild(snowflake);
+
+  setTimeout(() => {
+    snowflake.remove();
+  }, 5000);
+}
+
+setInterval(createSnowflake, 200);
+</script>
 
 </body>
 </html>
