--- a/index.html
+++ b/index.html
@@ -33,11 +33,26 @@ body {
   animation:fadeIn 1s ease;
 }
 
+/* ======= COVER خلف الصورة ======= */
+.cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 140px;
+  background: linear-gradient(135deg, #f5d380, #c47f00);
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  z-index: 0;
+}
+
 .top-section {
   display: flex;
   width: 100%;
-  margin-bottom: 20px;
+  margin-top: 40px; /* رفع المحتوى قليلاً تحت الكوفر */
   justify-content: space-between;
+  position: relative;
+  z-index: 1;
 }
 
 .left-box {
@@ -45,6 +60,7 @@ body {
   flex-direction: column;
   align-items: center; 
   position: relative;
+  z-index: 2;
 }
 
 .avatar {
@@ -127,7 +143,7 @@ h1.name {
   transition: 0.3s ease;
 }
 .info-row:hover {
-  box-shadow: 0 0 20px rgba(255,215,0,0.5);
+  box-shadow: 0 0 20px rgba(255,215,0.5);
 }
 .info-row i {
   color:#f5d380;
@@ -282,7 +298,7 @@ h1.name {
 .snowflake {
   position: absolute;
   top: -10px;
-  color: #EFBF04; /* ذهبي */
+  color: #EFBF04;
   font-size: 8px;
   user-select: none;
   pointer-events: none;
@@ -296,13 +312,13 @@ h1.name {
   0% { transform: translateY(0) rotate(0deg); opacity:0.8; }
   100% { transform: translateY(150px) rotate(360deg); opacity:0; }
 }
-
 </style>
 </head>
 <body>
 
 <div class="card">
   <div class="glow"></div>
+  <div class="cover"></div>
 
   <div class="top-section">
 
