--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@ body {
   animation:fadeIn 1s ease;
 }
 
-/* ======= COVER خلف الصورة ======= */
+/* ======= COVER صورة ======= */
 .cover {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 140px;
-  background: linear-gradient(135deg, #f5d380, #c47f00);
+  background: url('https://img.alfrsantv.com/img/f176636174587211.jpg') center/cover no-repeat;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   z-index: 0;
@@ -49,10 +49,10 @@ body {
 .top-section {
   display: flex;
   width: 100%;
-  margin-top: 40px; /* رفع المحتوى قليلاً تحت الكوفر */
+  margin-top: 40px; /* رفع المحتوى تحت الكوفر */
   justify-content: space-between;
   position: relative;
-  z-index: 1;
+  z-index: 2; /* لضمان ظهور المحتوى فوق الكوفر */
 }
 
 .left-box {
