--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
   background:#111;
   border:1px solid rgba(255,215,0,0.25);
   border-radius:30px;
-  padding:35px 30px 45px;
+  padding:35px 20px 45px;
   text-align:center;
   box-shadow:0 0 25px rgba(255,215,0,0.15);
   position:relative;
@@ -40,7 +40,7 @@ body {
   left: 0;
   width: 100%;
   height: 140px;
-  background: url('https://img.alfrsantv.com/img/f176636174587211.jpg') center/cover no-repeat;
+  background: url('https://img.alfrsantv.com/img/f176636174587211.jpg') center/cover no-repeat; /* ضع رابط صورتك هنا */
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   z-index: 0;
@@ -48,9 +48,9 @@ body {
 
 .top-section {
   display: flex;
-  width: 100%;
-  margin-top: 40px; /* رفع المحتوى تحت الكوفر */
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 60px; /* رفع الصورة فوق الغلاف */
   position: relative;
   z-index: 2; /* لضمان ظهور المحتوى فوق الكوفر */
 }
@@ -120,43 +120,41 @@ h1.name {
   animation:glowAnim 3s ease-in-out infinite alternate;
 }
 
-/* ======== بطاقات المعلومات ======== */
+/* ======== بطاقات المعلومات أفقي ======== */
 .info-box {
-  display:flex;
-  flex-direction:column;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap:12px;
-  margin-top:10px;
-  align-items: flex-start;
+  margin-top:20px;
+  z-index:2;
 }
 
 .info-row {
   display:flex;
   align-items:center;
-  justify-content: flex-start;
-  gap:10px;
+  gap:8px;
   background: #1a1a1a;
   border:1px solid rgba(255,215,0,0.25);
-  padding:10px 15px;
+  padding:8px 12px;
   border-radius:12px;
-  min-width:200px;
-  box-shadow: 0 0 15px rgba(255,215,0.2);
+  min-width:120px;
+  box-shadow: 0 0 12px rgba(255,215,0,0.2);
   transition: 0.3s ease;
+  font-size:14px;
 }
 .info-row:hover {
-  box-shadow: 0 0 20px rgba(255,215,0.5);
+  box-shadow: 0 0 18px rgba(255,215,0,0.5);
 }
 .info-row i {
   color:#f5d380;
   font-size:16px;
-  width:18px;
 }
 .info-row span.question {
   font-weight:700;
-  font-size:15px;
   color:#f5d380;
 }
 .info-row span.answer, .info-row a {
-  font-size:15px;
   color:#fff;
   font-weight:500;
 }
@@ -174,7 +172,7 @@ h1.name {
   background:rgba(255,215,0,0.05);
   padding:15px;
   border-radius:20px;
-  border:1px solid rgba(255,215,0,0.12);
+  border:1px solid rgba(255,215,0.12);
   box-shadow:0 0 12px rgba(255,215,0,0.07);
   animation:fadeInUp 1s ease forwards 0.5s;
 }
@@ -280,7 +278,7 @@ h1.name {
 .video-box:hover{
   transform:scale(1.07);
   transition:.25s ease;
-  box-shadow:0 0 18px rgba(255,215,0,0.4);
+  box-shadow:0 0 18px rgba(255,215,0.4);
 }
 
 /* ======= ثلوج الصورة ======= */
@@ -333,7 +331,6 @@ h1.name {
     </div>
 
     <div class="info-box">
-
       <div class="info-row">
         <i class="fas fa-flag"></i>
         <span class="question">البلد:</span>
@@ -357,7 +354,6 @@ h1.name {
         <span class="question">الشات:</span>
         <a href="https://xat.com/melodylovers" target="_blank">شات ميلودى</a>
       </div>
-
     </div>
 
   </div>
