--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {
   border-radius:50%;
   border:4px solid #f5d380;
   padding:0;
-  background: transparent; /* إزالة الدائرة السوداء */
+  background: transparent;
   box-shadow:0 0 18px rgba(255,215,0,0.4);
   overflow:hidden;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
@@ -120,35 +120,37 @@ h1.name {
   animation:glowAnim 3s ease-in-out infinite alternate;
 }
 
-/* ======== بطاقات المعلومات أفقي ======== */
+/* ======== بطاقات المعلومات أفقي في سطر واحد ======== */
 .info-box {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap; /* يمنع الانكسار */
   justify-content: center;
-  gap:12px;
-  margin-top:20px;
+  gap:10px;
+  margin-top:15px;
   z-index:2;
+  overflow-x:auto; /* يسمح بالتمرير لو تجاوز الكارت */
+  padding-bottom:5px;
 }
 
 .info-row {
   display:flex;
   align-items:center;
-  gap:8px;
+  gap:5px;
   background: #1a1a1a;
   border:1px solid rgba(255,215,0,0.25);
-  padding:8px 12px;
+  padding:6px 10px;
   border-radius:12px;
-  min-width:120px;
-  box-shadow: 0 0 12px rgba(255,215,0,0.2);
+  box-shadow: 0 0 10px rgba(255,215,0,0.2);
   transition: 0.3s ease;
-  font-size:14px;
+  font-size:13px;
+  white-space: nowrap; /* يمنع الانكسار داخل البطاقة */
 }
 .info-row:hover {
-  box-shadow: 0 0 18px rgba(255,215,0,0.5);
+  box-shadow: 0 0 15px rgba(255,215,0,0.5);
 }
 .info-row i {
   color:#f5d380;
-  font-size:16px;
+  font-size:14px;
 }
 .info-row span.question {
   font-weight:700;
@@ -173,7 +175,7 @@ h1.name {
   padding:15px;
   border-radius:20px;
   border:1px solid rgba(255,215,0.12);
-  box-shadow:0 0 12px rgba(255,215,0,0.07);
+  box-shadow:0 0 12px rgba(255,215,0.07);
   animation:fadeInUp 1s ease forwards 0.5s;
 }
 .quotes span{
