--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@ body {
   box-shadow:0 0 25px rgba(255,215,0,0.15);
   position:relative;
   overflow:hidden;
-  animation:fadeIn 1s ease;
 }
 
 /* ======= COVER صورة ======= */
@@ -40,7 +39,7 @@ body {
   left: 0;
   width: 100%;
   height: 140px;
-  background: url('https://img.alfrsantv.com/img/f176636174587211.jpg') center/cover no-repeat; /* ضع رابط صورتك هنا */
+  background: url('https://img.alfrsantv.com/img/f176636174587211.jpg') center/cover no-repeat; 
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   z-index: 0;
@@ -50,9 +49,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 60px; /* رفع الصورة فوق الغلاف */
+  margin-top: 60px; 
   position: relative;
-  z-index: 2; /* لضمان ظهور المحتوى فوق الكوفر */
+  z-index: 2; 
 }
 
 .left-box {
@@ -80,11 +79,8 @@ body {
   height:100%;
   border-radius:50%;
   object-fit:cover;
-  transition: transform 0.5s ease, box-shadow 0.5s ease;
-}
-.avatar:hover img {
-  transform: scale(1.25);
-  box-shadow:0 0 30px rgba(255,215,0,0.6);
+  user-select: none; 
+  pointer-events: none; 
 }
 
 h1.name {
@@ -99,15 +95,6 @@ h1.name {
   font-size:14px;
   text-align:center;
   margin:2px 0;
-  animation:wave 2s ease-in-out infinite alternate;
-}
-.wave-text:nth-child(3) {
-  animation-delay:0.3s;
-}
-
-@keyframes wave {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(-6px); }
 }
 
 .glow {
@@ -117,18 +104,17 @@ h1.name {
   background: radial-gradient(circle, rgba(255,215,0,0.25), transparent 70%);
   filter:blur(70px);
   z-index:0;
-  animation:glowAnim 3s ease-in-out infinite alternate;
 }
 
 /* ======== بطاقات المعلومات أفقي في سطر واحد ======== */
 .info-box {
   display: flex;
-  flex-wrap: nowrap; /* يمنع الانكسار */
+  flex-wrap: nowrap; 
   justify-content: center;
   gap:10px;
   margin-top:15px;
   z-index:2;
-  overflow-x:auto; /* يسمح بالتمرير لو تجاوز الكارت */
+  overflow-x:auto; 
   padding-bottom:5px;
 }
 
@@ -141,12 +127,8 @@ h1.name {
   padding:6px 10px;
   border-radius:12px;
   box-shadow: 0 0 10px rgba(255,215,0,0.2);
-  transition: 0.3s ease;
   font-size:13px;
-  white-space: nowrap; /* يمنع الانكسار داخل البطاقة */
-}
-.info-row:hover {
-  box-shadow: 0 0 15px rgba(255,215,0,0.5);
+  white-space: nowrap; 
 }
 .info-row i {
   color:#f5d380;
@@ -165,59 +147,20 @@ h1.name {
   text-decoration:none;
 }
 
-/* ======== الاقتباسات ======== */
+/* ======== الاقتباسات بدون تأثيرات ======== */
 .quotes{
   margin-top:18px;
   font-size:17px;
   line-height:1.9;
-  opacity:0;
   background:rgba(255,215,0,0.05);
   padding:15px;
   border-radius:20px;
   border:1px solid rgba(255,215,0.12);
   box-shadow:0 0 12px rgba(255,215,0.07);
-  animation:fadeInUp 1s ease forwards 0.5s;
 }
 .quotes span{
   display:block;
   margin-bottom:10px;
-  opacity:0;
-  animation:quoteAppear 0.8s ease forwards;
-}
-.quotes span:nth-child(1){animation-delay:0.7s}
-.quotes span:nth-child(2){animation-delay:1s}
-
-@keyframes quoteAppear{
-  0%{opacity:0; transform:translateY(15px);}
-  100%{opacity:1; transform:translateY(0);}
-}
-
-.heart {
-  font-size:40px;
-  margin-top:15px;
-  animation:pulse 1.4s infinite ease-in-out, fadeInUp 1s ease forwards 1.2s;
-  opacity:0;
-}
-
-@keyframes pulse {
-  0% {transform:scale(1); opacity:0.8;}
-  50% {transform:scale(1.3); opacity:1;}
-  100% {transform:scale(1); opacity:0.8;}
-}
-
-@keyframes fadeInUp{
-  0%{opacity:0; transform:translateY(25px);}
-  100%{opacity:1; transform:translateY(0);}
-}
-
-@keyframes fadeIn{
-  0%{opacity:0; transform:scale(0.95);}
-  100%{opacity:1; transform:scale(1);}
-}
-
-@keyframes glowAnim{
-  0%{transform:translateX(-50%) scale(1);}
-  100%{transform:translateX(-50%) scale(1.05);}
 }
 
 /* ======= الفيديوهات ======= */
@@ -265,13 +208,7 @@ h1.name {
   margin:0 10px;
   border:1px solid rgba(255,215,0,0.25);
   box-shadow:0 0 15px rgba(255,215,0.2);
-  opacity:0;
-  transform:translateY(20px);
-  animation:fadeInUp .8s ease forwards;
 }
-.video-box:nth-child(1){animation-delay:.1s}
-.video-box:nth-child(2){animation-delay:.25s}
-.video-box:nth-child(3){animation-delay:.4s}
 .video-box iframe{
   width:150px;
   height:260px;
@@ -303,15 +240,8 @@ h1.name {
   user-select: none;
   pointer-events: none;
   opacity: 0.8;
-  animation-name: fall;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
 }
 
-@keyframes fall {
-  0% { transform: translateY(0) rotate(0deg); opacity:0.8; }
-  100% { transform: translateY(150px) rotate(360deg); opacity:0; }
-}
 </style>
 </head>
 <body>
@@ -334,25 +264,21 @@ h1.name {
 
     <div class="info-box">
       <div class="info-row">
-        <i class="fas fa-flag"></i>
         <span class="question">البلد:</span>
         <span class="answer">مصر</span>
       </div>
 
       <div class="info-row">
-        <i class="fas fa-palette"></i>
         <span class="question">اللون:</span>
         <span class="answer">أسود</span>
       </div>
 
       <div class="info-row">
-        <i class="fas fa-face-smile"></i>
         <span class="question">المزاج:</span>
         <span class="answer">متقلب</span>
       </div>
 
       <div class="info-row">
-        <i class="fas fa-comment"></i>
         <span class="question">الشات:</span>
         <a href="https://xat.com/melodylovers" target="_blank">شات ميلودى</a>
       </div>
@@ -364,8 +290,6 @@ h1.name {
     <span>أحبك فقط بسبب شخصيتك، وليس لما تمتلكه…</span>
     <span>أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك.</span>
   </div>
-
-  <div class="heart">❤</div>
 
   <div class="videos">
     <div class="videos-title">فيديوهاتي</div>
