--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@ body {
   background: transparent;
   box-shadow:0 0 18px rgba(255,215,0,0.4);
   overflow:hidden;
-  transition: transform 0.4s ease, box-shadow 0.4s ease;
   position: relative;
 }
 .avatar img {
@@ -168,7 +167,7 @@ h1.name {
   width:100%;
   margin-top:20px;
   padding-top:10px;
-  border-top:1px solid rgba(255,215,0,0.25);
+  border-top:1px solid rgba(255,215,0.25);
 }
 .videos-title{
   background:#f5d380;
@@ -240,8 +239,15 @@ h1.name {
   user-select: none;
   pointer-events: none;
   opacity: 0.8;
+  animation-name: fall;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
+@keyframes fall {
+  0% { transform: translateY(0) rotate(0deg); opacity:0.8; }
+  100% { transform: translateY(150px) rotate(360deg); opacity:0; }
+}
 </style>
 </head>
 <body>
