--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 * {margin:0; padding:0; box-sizing:border-box; font-family:"Tajawal", sans-serif;}
 body {
   background:#0b0b0b;
-  color:#f5d380;
+  color:#af0856;
   display:flex;
   justify-content:center;
   align-items:flex-start;
@@ -23,11 +23,11 @@ body {
   width:100%;
   max-width:600px;
   background:#111;
-  border:1px solid rgba(255,215,0,0.25);
+  border:1px solid rgba(175,8,86,0.25);
   border-radius:30px;
   padding:35px 20px 45px;
   text-align:center;
-  box-shadow:0 0 25px rgba(255,215,0,0.15);
+  box-shadow:0 0 25px rgba(175,8,86,0.15);
   position:relative;
   overflow:hidden;
 }
@@ -66,10 +66,10 @@ body {
   width:130px;
   height:130px;
   border-radius:50%;
-  border:4px solid #f5d380;
+  border:4px solid #af0856;
   padding:0;
   background: transparent;
-  box-shadow:0 0 18px rgba(255,215,0,0.4);
+  box-shadow:0 0 18px rgba(175,8,86,0.4);
   overflow:hidden;
   position: relative;
 }
@@ -85,12 +85,12 @@ body {
 h1.name {
   margin:10px 0 5px;
   font-size:28px;
-  color:#f5d380;
+  color:#af0856;
   text-align:center;
 }
 
 .wave-text {
-  color:#f5d380;
+  color:#af0856;
   font-size:14px;
   text-align:center;
   margin:2px 0;
@@ -100,51 +100,25 @@ h1.name {
   position:absolute;
   top:-40%; left:50%; transform:translateX(-50%);
   width:400px; height:400px;
-  background: radial-gradient(circle, rgba(255,215,0,0.25), transparent 70%);
+  background: radial-gradient(circle, rgba(175,8,86,0.25), transparent 70%);
   filter:blur(70px);
   z-index:0;
 }
 
-/* ======== الاقتباسات مع التأثيرات ======== */
+/* ======== الاقتباسات بدون تأثيرات ======== */
 .quotes{
   margin-top:18px;
   font-size:17px;
   line-height:1.9;
-  opacity:0;
-  background:rgba(255,215,0,0.05);
+  background:rgba(175,8,86,0.05);
   padding:15px;
   border-radius:20px;
-  border:1px solid rgba(255,215,0,0.12);
-  box-shadow:0 0 12px rgba(255,215,0,0.07);
-  animation:fadeInUp 1s ease forwards 0.5s;
+  border:1px solid rgba(175,8,86,0.12);
+  box-shadow:0 0 12px rgba(175,8,86,0.07);
 }
 .quotes span{
   display:block;
   margin-bottom:10px;
-  opacity:0;
-  animation:quoteAppear 0.8s ease forwards;
-}
-.quotes span:nth-child(1){animation-delay:0.7s}
-.quotes span:nth-child(2){animation-delay:1s}
-
-@keyframes quoteAppear{
-  0%{opacity:0; transform:translateY(15px);}
-  100%{opacity:1; transform:translateY(0);}
-}
-
-@keyframes fadeInUp{
-  0%{opacity:0; transform:translateY(25px);}
-  100%{opacity:1; transform:translateY(0);}
-}
-
-@keyframes fadeIn{
-  0%{opacity:0; transform:scale(0.95);}
-  100%{opacity:1; transform:scale(1);}
-}
-
-@keyframes glowAnim{
-  0%{transform:translateX(-50%) scale(1);}
-  100%{transform:translateX(-50%) scale(1.05);}
 }
 
 /* ======= الفيديوهات ======= */
@@ -152,10 +126,10 @@ h1.name {
   width:100%;
   margin-top:20px;
   padding-top:10px;
-  border-top:1px solid rgba(255,215,0,0.25);
+  border-top:1px solid rgba(175,8,86,0.25);
 }
 .videos-title{
-  background:#f5d380;
+  background:#af0856;
   color:#000;
   padding:10px 18px;
   font-size:18px;
@@ -169,7 +143,7 @@ h1.name {
   white-space:nowrap;
   padding-bottom:10px;
   scrollbar-width:thin;
-  scrollbar-color:#f5d380 #222;
+  scrollbar-color:#af0856 #222;
 }
 .videos-scroll::-webkit-scrollbar{
   height:8px;
@@ -179,7 +153,7 @@ h1.name {
   border-radius:10px;
 }
 .videos-scroll::-webkit-scrollbar-thumb{
-  background:#f5d380;
+  background:#af0856;
   border-radius:10px;
 }
 .video-box{
@@ -190,8 +164,8 @@ h1.name {
   border-radius:16px;
   overflow:hidden;
   margin:0 10px;
-  border:1px solid rgba(255,215,0,0.25);
-  box-shadow:0 0 15px rgba(255,215,0.2);
+  border:1px solid rgba(175,8,86,0.25);
+  box-shadow:0 0 15px rgba(175,8,86,0.2);
 }
 .video-box iframe{
   width:150px;
@@ -201,7 +175,7 @@ h1.name {
 .video-box:hover{
   transform:scale(1.07);
   transition:.25s ease;
-  box-shadow:0 0 18px rgba(255,215,0.4);
+  box-shadow:0 0 18px rgba(175,8,86,0.4);
 }
 
 /* ======= ثلوج الصورة ======= */
@@ -219,7 +193,7 @@ h1.name {
 .snowflake {
   position: absolute;
   top: -10px;
-  color: #EFBF04;
+  color: #af0856;
   font-size: 8px;
   user-select: none;
   pointer-events: none;
