--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 * {margin:0; padding:0; box-sizing:border-box; font-family:"Tajawal", sans-serif;}
 body {
   background:#0b0b0b;
-  color:#af0856;
+  color:#645662;
   display:flex;
   justify-content:center;
   align-items:flex-start;
