--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@ h1.name {
         <div id="snow-container"></div>
       </div>
       <h1 class="name">ɖƲιιȻ</h1>
-      <div class="wave-text">الحربوقة 🐍</div>
-      <div class="wave-text">أم لسان طويل</div>
+      <div class="wave-text">أم لسان طويل 🐍 الحربوقة</div>
+      <div class="wave-text"></div>
     </div>
 
   </div>
