--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@ h1.name {
   gap:5px;
 }
 
-/* علامة التوثيق */
+/* fir */
 .name .verified {
-  color:#1da1f2; /* لون أزرق مثل توثيق الفيس */
+  color:#1da1f2;
   font-size:18px;
 }
 
@@ -119,7 +119,7 @@ h1.name {
   z-index:0;
 }
 
-/* ======== الاقتباسات بدون تأثيرات ======== */
+/* ======== الاقتباسات ======== */
 .quotes{
   margin-top:18px;
   font-size:17px;
@@ -192,7 +192,7 @@ h1.name {
   box-shadow:0 0 18px rgba(175,8,86,0.4);
 }
 
-/* ======= ثلوج الصورة ======= */
+/* ======= ثلوج ======= */
 #snow-container {
   position: absolute;
   top: 0;
