--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ h1.name {
         <div id="snow-container"></div>
       </div>
       <h1 class="name">ɖƲιιȻ <i class="fas fa-circle-check" style="color:#af0856;"></i></h1>
-      <div class="wave-text">الحربوقة 🐍 أم لسان طويل</div>
+      <div class="wave-text">ستايلش الشات 🐍</div>
       <div class="wave-text"></div>
     </div>
 
